fixed z-index issues

--- a/app/css/global.scss
+++ b/app/css/global.scss
@@ -17,6 +17,7 @@ body {
 .windowz-container {
   box-sizing: border-box;
   background: palegreen;
+  box-sizing: border-box;
   border: 1px solid green;
 }
 
